sandbox-codebase/objects/mone__Mailchimp_Member__c/mone__Mailchimp_Member__c.object-meta.xml
<CustomObject>
    <description>Information about a specific list member, including a currently subscribed, unsubscribed, or bounced member.</description>
    <label>Mailchimp Member</label>
    <nameField>
        <label>Mailchimp Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>