sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Account__c.field-meta.xml
<CustomField>
    <fullName>mone__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mailchimp Members</relationshipLabel>
    <relationshipName>Mailchimp_Members</relationshipName>
    <type>Lookup</type>
</CustomField>