sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Active__c.field-meta.xml
<CustomField>
    <fullName>mone__Active__c</fullName>
    <formula>CASE(TEXT(mone__Status__c), &quot;subscribed&quot;, 1, &quot;pending&quot;, 1, &quot;transactional&quot;, 1, 0)=1</formula>
    <inlineHelpText>Determines whether the member is active in Mailchimp.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>