sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Audit__c.field-meta.xml
<CustomField>
    <fullName>mone__Audit__c</fullName>
    <inlineHelpText>Internal audit information.</inlineHelpText>
    <label>Audit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>