sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Avg_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>mone__Avg_Open_Rate__c</fullName>
    <inlineHelpText>A subscriber&apos;s average open rate.</inlineHelpText>
    <label>Avg Open Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>