sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Consents_To_One_To_One_Messaging__c.field-meta.xml
<CustomField>
    <fullName>mone__Consents_To_One_To_One_Messaging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether a contact consents to 1:1 messaging.</inlineHelpText>
    <label>Consents To One To One Messaging</label>
    <type>Checkbox</type>
</CustomField>