sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Contact__c.field-meta.xml
<CustomField>
    <fullName>mone__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the related Salesforce Contact (if it exists).</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mailchimp Members</relationshipLabel>
    <relationshipName>Mailchimp_Members</relationshipName>
    <type>Lookup</type>
</CustomField>