sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Contact_Id__c</fullName>
    <inlineHelpText>As Mailchimp evolves beyond email, you may eventually have contacts without email addresses. While the id is the MD5 hash of their email address, this contact_id is agnostic of contact&apos;s inclusion of an email address.</inlineHelpText>
    <label>Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>