sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Email__c.field-meta.xml
<CustomField>
    <fullName>mone__Email__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Mailchimp Email Address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>