sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Email_Client__c.field-meta.xml
<CustomField>
    <fullName>mone__Email_Client__c</fullName>
    <inlineHelpText>The list member&apos;s email client.</inlineHelpText>
    <label>Email Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>