sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Email_Type__c.field-meta.xml
<CustomField>
    <fullName>mone__Email_Type__c</fullName>
    <inlineHelpText>Type of email this member asked to get (&apos;html&apos; or &apos;text&apos;).</inlineHelpText>
    <label>Email Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>