sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Full_Name__c</fullName>
    <inlineHelpText>The contact&apos;s full name.</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>