sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Group_Ids__c.field-meta.xml
<CustomField>
    <fullName>mone__Group_Ids__c</fullName>
    <inlineHelpText>Stores the Mailchimp Group Ids for this Member.</inlineHelpText>
    <label>Group Ids</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- none --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>