sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Groups__c.field-meta.xml
<CustomField>
    <fullName>mone__Groups__c</fullName>
    <inlineHelpText>Used to filter list members by Groups.</inlineHelpText>
    <label>Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- None --</fullName>
                <color>#330033</color>
                <default>true</default>
                <label>-- None --</label>
            </value>
            <value>
                <fullName>879133366b</fullName>
                <label>Two</label>
            </value>
            <value>
                <fullName>B12 Group One | Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>