sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Ip_Opt__c.field-meta.xml
<CustomField>
    <fullName>mone__Ip_Opt__c</fullName>
    <inlineHelpText>The IP address the subscriber used to confirm their opt-in status.</inlineHelpText>
    <label>Ip Opt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>