sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Ip_Signup__c.field-meta.xml
<CustomField>
    <fullName>mone__Ip_Signup__c</fullName>
    <inlineHelpText>IP address the subscriber signed up from.</inlineHelpText>
    <label>Ip Signup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>