sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Language__c.field-meta.xml
<CustomField>
    <fullName>mone__Language__c</fullName>
    <inlineHelpText>If set/detected, the subscriber&apos;s language.</inlineHelpText>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>