sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Changed__c</fullName>
    <inlineHelpText>The date and time the member&apos;s info was last changed.</inlineHelpText>
    <label>Last Changed</label>
    <type>DateTime</type>
</CustomField>