sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Last_Import__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Import__c</fullName>
    <inlineHelpText>It contains the last error message returned from Mailchimp. If there are no errors, this field will be empty.</inlineHelpText>
    <label>Last Import</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>