sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Last_Import_Error__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Import_Error__c</fullName>
    <inlineHelpText>It contains the error returned from Mailchimp whilst trying to update the audience member.</inlineHelpText>
    <label>Last Import Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>