sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Last_Import_Source__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Import_Source__c</fullName>
    <inlineHelpText>The source and Id of the Mailchimp Import. This will be populated if the record was added to Mailchimp via Salesforce.</inlineHelpText>
    <label>Last Import Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>