sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Lead__c.field-meta.xml
<CustomField>
    <fullName>mone__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the related Salesforce Lead (if it exists).</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Mailchimp Members</relationshipLabel>
    <relationshipName>Mailchimp_Members</relationshipName>
    <type>Lookup</type>
</CustomField>