sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Location__c.field-meta.xml
<CustomField>
    <fullName>mone__Location__c</fullName>
    <inlineHelpText>Subscriber location information.</inlineHelpText>
    <label>Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>