sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Mailchimp_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lookup to the object that contains Mailchimp List information.</inlineHelpText>
    <label>Mailchimp List</label>
    <referenceTo>mone__Mailchimp_List__c</referenceTo>
    <relationshipLabel>Mailchimp Members</relationshipLabel>
    <relationshipName>Mailchimp_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>