sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Member_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Member_Id__c</fullName>
    <inlineHelpText>The MD5 hash of the lowercase version of the list member&apos;s email address.</inlineHelpText>
    <label>Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>