sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Member_Rating__c.field-meta.xml
<CustomField>
    <fullName>mone__Member_Rating__c</fullName>
    <inlineHelpText>Star rating for this member, between 1 and 5.</inlineHelpText>
    <label>Member Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>