sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Merge_Fields_Primary__c.field-meta.xml
<CustomField>
    <fullName>mone__Merge_Fields_Primary__c</fullName>
    <description>Holds the mappings between the Mailchimp fields and stored values.</description>
    <inlineHelpText>Internal use.</inlineHelpText>
    <label>Merge Fields Primary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>