sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Object_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Internal lookup to a Salesforce object. Typically this will be a Contact or Lead, but it may also point to a custom object.</inlineHelpText>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>