sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Source__c.field-meta.xml
<CustomField>
    <fullName>mone__Source__c</fullName>
    <inlineHelpText>The source from which the subscriber was added to this list.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>