sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Status__c.field-meta.xml
<CustomField>
    <fullName>mone__Status__c</fullName>
    <defaultValue>&quot;unknown&quot;</defaultValue>
    <inlineHelpText>Subscriber&apos;s current status. Possible values: &quot;subscribed&quot;, &quot;unsubscribed&quot;, &quot;cleaned&quot;, &quot;pending&quot;, &quot;transactional&quot;, or &quot;archived&quot;.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Cleaned</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>