sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Tags__c.field-meta.xml
<CustomField>
    <fullName>mone__Tags__c</fullName>
    <inlineHelpText>The tags that are associated with a member.</inlineHelpText>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- None --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>