sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Tags_Count__c.field-meta.xml
<CustomField>
    <fullName>mone__Tags_Count__c</fullName>
    <inlineHelpText>The number of tags applied to this member.</inlineHelpText>
    <label>Tags Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>