sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Timestamp_Opt__c.field-meta.xml
<CustomField>
    <fullName>mone__Timestamp_Opt__c</fullName>
    <inlineHelpText>The date and time the subscriber confirmed their opt-in status.</inlineHelpText>
    <label>Timestamp Opt</label>
    <type>DateTime</type>
</CustomField>