sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Timestamp_Signup__c.field-meta.xml
<CustomField>
    <fullName>mone__Timestamp_Signup__c</fullName>
    <inlineHelpText>The date and time the subscriber signed up for the list.</inlineHelpText>
    <label>Timestamp Signup</label>
    <type>DateTime</type>
</CustomField>