sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Unique_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Unique_Email_Id__c</fullName>
    <inlineHelpText>An identifier for the address across all of Mailchimp.</inlineHelpText>
    <label>Unique Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>