sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Vip__c.field-meta.xml
<CustomField>
    <fullName>mone__Vip__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>VIP status for subscriber.</inlineHelpText>
    <label>Vip</label>
    <type>Checkbox</type>
</CustomField>