sandbox-codebase/objects/mone__Mailchimp_Member__c/fields/mone__Web_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Web_Id__c</fullName>
    <inlineHelpText>The ID used in the Mailchimp web application. View this member in your Mailchimp
        account at https://{dc}.admin.mailchimp.com/lists/members/view?id={web_id}.</inlineHelpText>
    <label>Web Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>