sandbox-codebase/objects/mone__Mailchimp_Member__c/listViews/mone__All1.listView-meta.xml
<ListView>
    <fullName>mone__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>